# Copyright 2024 Sony Group Corporation.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel",
    "pytest-runner"
]
build-backend = "setuptools.build_meta"

[project]
name = "nnabla_rl"
authors = [
    { name = "Sony Group Corporation" }
]
maintainers = [
    { name = "Yu Ishihara" },
    { name = "Shunichi Sekiguchi" },
    { name = "Takayoshi Takayanagi" },
]
description = "Deep reinforcement learning library built on top of Neural Network Libraries"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux"
]
keywords = [
    "deep learning",
    "artificial intelligence",
    "machine learning",
    "neural network"
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "nnabla >= 1.17, != 1.18.0",
    "numpy >= 1.17",
    "gym < 0.26.0",
    "opencv-python",
    "packaging",
    "tqdm",
    "gymnasium"
]

[project.urls]
Homepage = "https://github.com/sony/nnabla-rl"
Repository = "https://github.com/sony/nnabla-rl"
Documentation = "https://nnabla-rl.readthedocs.io/en/latest/"

[project.optional-dependencies]
render = ["pyglet >= 1.4.0"]
dev = [
    "flake8",
    "pylint",
    "pytest",
    "pytest-cov",
    "mypy != 1.11.0",
    "typing-extensions",
    "isort > 5.0.0",
    "black",
    "docformatter"
]
deploy = [
    "setuptools >= 61.0.0",
    "wheel",
    "build",
    "twine"
]
doc = ["sphinx", "sphinx_rtd_theme"]
test = [
    "pytest",
    "pytest-cov",
    "mock"
]

[tool.setuptools.dynamic]
version = {attr = "nnabla_rl.__version__"}

[tool.setuptools.packages.find]
exclude = [
    "bin*",
    "docs*",
    "examples*",
    "interactive-demos",
    "reproductions*",
    "tests*",
    "test_resources*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  nnabla_rl/external
)
'''

[tool.isort]
profile = "black"
line_length = 120
honor_noqa = true
known_first_party = ["nnabla"]
skip_glob = ["external"]

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
files = ["nnabla_rl"]

[tool.docformatter]
recursive = true
