# Copyright (c) 2021 Sony Group Corporation. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = nnabla_rl
version = attr: nnabla_rl.__version__
author = Yu Ishihara, Sony Group Corporation
description = Deep reinforcement learning library built on top of NNabla
license = Apache License 2.0
url = https://github.com/sony/nnabla-rl
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
keywords = deep learning artificial intelligence machine learning neural network
python_requires = >=3.6

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    nnabla>=1.17,!=1.18.0
    gym
    dataclasses;python_version=="3.6"
    opencv-python
scripts =
    bin/plot_result
    bin/check_best_iteration
    bin/compile_results
    bin/train_with_seeds
    bin/evaluate_algorithm
test_suite = tests
tests_require = pytest; pytest-cov; mock

[options.packages.find]
exclude = 
    examples
    reproductions
    tests

[aliases]
test=pytest

[tool:pytest]
addopts=-s