# Copyright 2020,2021 Sony Corporation.
# Copyright 2021 Sony Group Corporation.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = nnabla_rl
version = attr: nnabla_rl.__version__
author = Yu Ishihara, Sony Group Corporation
description = Deep reinforcement learning library built on top of Neural Network Libraries
license = Apache License 2.0
url = https://github.com/sony/nnabla-rl
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
keywords = deep learning artificial intelligence machine learning neural network
python_requires = >=3.6

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    nnabla>=1.17,!=1.18.0
    numpy>=1.17
    gym
    dataclasses;python_version=="3.6"
    opencv-python
scripts =
    bin/check_best_iteration
    bin/compile_results
    bin/evaluate_algorithm
    bin/insert_copyright
    bin/plot_result
    bin/train_with_seeds
    bin/test_reproductions
test_suite = tests
tests_require = pytest; pytest-cov; mock

[options.packages.find]
exclude = 
    examples
    reproductions
    tests

[aliases]
test=pytest

[tool:pytest]
addopts=-s

[pep8]
max-line-length=120
recursive=true

[isort]
line_length=120
honor_noqa=True
known_first_party=nnabla
skip_glob=external

[mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html for detail description of each configuration
python_version = 3.6
ignore_missing_imports = True
no_implicit_optional = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
files = nnabla_rl

[flake8]
max-line-length=120
filename=*.py
